k8s/infra/flagsmith/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flagsmith
  namespace: flagsmith
spec:
  ingressClassName: traefik
  rules:
    - host: flagsmith.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flagsmith
                port:
                  number: 8000
